# todo-widget

./: .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  TECHNICAL_DOCS.md  index.html  package-lock.json  package.json  plan.md  vite.config.ts
.agent/skills/tauri-build/: SKILL.md
docs/: project-overview.md
src/: App.css  App.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  output.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: BubbleWindow.tsx
src/services/: database.ts
